--- a/A09DesertClicker/app/src/main/res/values/strings.xml
+++ b/A09DesertClicker/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   -->
 
 <resources>
-    <string name="app_name">Dessert Clicker</string>
+    <string name="app_name">A09 Dessert Clicker</string>
     <string name="dessert_sold">Desserts Sold</string>
     <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
     <string name="share">Share</string>
