--- a/A10WordsApp2/app/src/main/res/values/strings.xml
+++ b/A10WordsApp2/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
      limitations under the License.
 -->
 <resources>
-    <string name="app_name">A10 WordsApp 2</string>
+    <string name="app_name">A10 Words2</string>
     <string name="detail_prefix">Words That Start With</string>
     <string name="action_switch_layout">Switch Layout</string>
     <string name="look_up_word">Look up word in a Browser Search</string>
